kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-api
  namespace: test-api
  labels:
    app: test-api
  annotations:
    argocd-image-updater.argoproj.io/image-list: test-api=ghcr.io/tomasovic/health-api
    argocd-image-updater.argoproj.io/test-api.tag-prefix: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      containers:
      - name: test-api
        image: ghcr.io/tomasovic/health-api:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
      - name: github-registry
