kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: test-api
  labels:
    app: test-api
spec:
  selector:
    app: test-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
